--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -24,8 +24,6 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - windows-latest
-          - macOS-latest
         go:
           - '1.17'
     steps:
@@ -48,13 +46,12 @@ jobs:
       - run: go install
       - run: go test -cover ./...
 
-# FIXME:
-# lint:
-#   runs-on: ubuntu-latest
-#   steps:
-#     - uses: actions/checkout@v2
-#     - uses: golangci/golangci-lint-action@v2
-#       with:
-#         version: v1.31
-#         args: --issues-exit-code=0
-#         only-new-issues: true
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: golangci/golangci-lint-action@v2
+        with:
+          version: v1.31
+          args: --issues-exit-code=0
+          only-new-issues: true
