--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -44,7 +44,8 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
       - run: go build
       - run: go install
-      - run: go test -cover ./...
+      - run: go test -coverprofile=cover.out -covermode=count ./...
+      - uses: codecov/codecov-action@v2.1.0
 
   lint:
     runs-on: ubuntu-latest
