--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,6 +11,8 @@ builds:
       - linux
       - windows
       - darwin
+    ldflags:
+      - -w -s -X main.version={{.Version}} -X main.revision={{.ShortCommit}}
 checksum:
   name_template: 'checksums.txt'
 snapshot:
